add int operations
